# pl_kafka

./: .dockerignore  .gitignore  Dockerfile  Makefile.in  README.md  configure.ac  docker.sh  shell.nix
.github/workflows/: blank.yml  compilation.yml
src/: kafka.pl  swi-kafka-c.c
test/: t1.pl  t2.pl  t3.pl
